AC_PREREQ(2.57)
AC_INIT([TiVoBridge], [1.0.1], [brian@smittyware.com])
AC_CONFIG_SRCDIR([src/tivobridge.c])
AC_CONFIG_HEADER([config.h])
AC_CONFIG_AUX_DIR([config])
AM_INIT_AUTOMAKE(foreign)

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
LIB_SOCKET_NSL

# Checks for header files.
AC_HEADER_STDC
AC_HEADER_TIME
AC_CHECK_HEADERS([arpa/inet.h fcntl.h netinet/in.h string.h sys/socket.h])
AC_CHECK_HEADERS([unistd.h sys/select.h syslog.h])
AC_CREATE_STDINT_H([src/my_stdint.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T
TYPE_SOCKLEN_T
AC_C_CONST

# Checks for library functions.
AC_FUNC_FORK
AC_TYPE_SIGNAL
AC_CHECK_FUNCS([strchr])
AC_CHECK_FUNC([strdup],
  AC_DEFINE_UNQUOTED([HAVE_STRDUP],[1],[Define if strdup function exists]),
  AC_LIBOBJ([strdup]))
AC_FUNC_SELECT_ARGTYPES

# Checks for optional features
TVB_ARG_ENABLE([mdns], [no], [Multicast DNS support])
if test "$ac_cv_use_mdns" != no; then
  AC_DEFINE([ENABLE_MDNS], [1],
      [Define to 1 to enable Multicast DNS support])
fi

AC_OUTPUT([Makefile src/Makefile doc/Makefile])
